src/test/ui/regions/regions-trait-1.stderr
error[E0308]: method not compatible with trait
  --> $DIR/regions-trait-1.rs:16:5
   |
LL |     fn get_ctxt(&self) -> &'a Ctxt {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'r> fn(&'r HasCtxt<'a>) -> &'r Ctxt`
              found fn pointer `for<'r> fn(&'r HasCtxt<'a>) -> &'a Ctxt`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
